[gd_scene load_steps=4 format=3 uid="uid://co2i4xa6xec1f"]

[ext_resource type="Texture2D" uid="uid://c77hxklda0vu3" path="res://enter vector + ending screen stuff!/end screen.PNG" id="1_d10ju"]
[ext_resource type="Script" uid="uid://cldffnbjooe5c" path="res://enter vector + ending screen stuff!/ending_screen.gd" id="1_p2o3f"]
[ext_resource type="FontFile" uid="uid://8ne8d5aawmql" path="res://enter matric screen stuff!/kindergarten.ttf" id="3_8uqxy"]

[node name="ending_screen" type="Node2D"]
script = ExtResource("1_p2o3f")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -27.0
offset_top = -20.0
offset_right = 1173.0
offset_bottom = 655.0
texture = ExtResource("1_d10ju")

[node name="og_2x2_matrix" type="Label" parent="."]
offset_left = 83.0
offset_top = 207.0
offset_right = 294.0
offset_bottom = 419.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.7764706, 0.6117647, 0.5803922, 1)
theme_override_colors/font_outline_color = Color(0.7764706, 0.6117647, 0.5803922, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_8uqxy")
theme_override_font_sizes/font_size = 80

[node name="og_2x1_matrix" type="Label" parent="."]
offset_left = 481.0
offset_top = 195.0
offset_right = 692.0
offset_bottom = 407.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.7764706, 0.6117647, 0.5803922, 1)
theme_override_colors/font_outline_color = Color(0.7764706, 0.6117647, 0.5803922, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_8uqxy")
theme_override_font_sizes/font_size = 80

[node name="final_matrix" type="Label" parent="."]
offset_left = 961.0
offset_top = 197.0
offset_right = 1172.0
offset_bottom = 409.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.7764706, 0.6117647, 0.5803922, 1)
theme_override_colors/font_outline_color = Color(0.7764706, 0.6117647, 0.5803922, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_8uqxy")
theme_override_font_sizes/font_size = 80

[node name="redo" type="Button" parent="."]
show_behind_parent = true
offset_left = 24.0
offset_top = 494.0
offset_right = 345.0
offset_bottom = 591.0

[node name="start again" type="Button" parent="."]
show_behind_parent = true
offset_left = 400.0
offset_top = 494.0
offset_right = 721.0
offset_bottom = 591.0

[node name="quit" type="Button" parent="."]
show_behind_parent = true
offset_left = 783.0
offset_top = 494.0
offset_right = 1104.0
offset_bottom = 591.0

[connection signal="pressed" from="redo" to="." method="_on_redo_pressed"]
[connection signal="pressed" from="start again" to="." method="_on_start_again_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
